# percolator-stake

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  AUDIT.md  KANI-DEEP-ANALYSIS.md  KANI-PROOF-ANALYSIS.md  WRAPPER-HARDENING.md
kani-proofs/: Cargo.toml
kani-proofs/src/: lib.rs
scripts/: e2e-test.ts
src/: cpi.rs  entrypoint.rs  error.rs  instruction.rs  lib.rs  math.rs  processor.rs  state.rs
tests/: cpi_tags.rs  error_codes.rs  kani.rs  proptest_math.rs  struct_layout.rs  unit.rs
